Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
 </head>
 <body>
 
-<!-- N˙t b?t/t?t nh?c -->
+<!-- N√∫t b?t/t?t nh?c -->
 <div id="music-icon"></div>
 <audio id="bg-music" src="music.mp3" loop></audio>
 
-<!-- Tr·i tim trung t‚m -->
+<!-- Tr√°i tim trung t√¢m -->
 <div class="heart" id="heart">
   <img src="img1.png" alt="heart" />
   <span>An?</span>
@@ -192,7 +192,7 @@
 <!-- H?p chat -->
 <div class="chat-box" id="chatBox"></div>
 
-<!-- N˙t clear -->
+<!-- N√∫t clear -->
 <button class="clear-btn" onclick="clearText()">Clear</button>
 <button class="restart-btn" onclick="location.reload()">Restart</button>
 
@@ -268,7 +268,7 @@ function startNeonText() {
   typeLine();
 }
 
-/* Tr·i tim */
+/* Tr√°i tim */
 const asciiLines = `
 I Love You
 I Love You
