--- a/index.html
+++ b/index.html
@@ -216,30 +216,30 @@ musicIcon.addEventListener('click', () => {
 /* Neon text */
 const lines = [
   ":>",
-  "khong biet loan yeu thay sao nua",
-  "nhung ma minh nghich linh tinh",
-  "roi thanh ra cai nay ne",
+ "loan vao lai roi ne",
+  "00",
+  "loan yeu co nghi la",
+  "thinh thoang minh nen viet",
+  "may cai linh tinh len day khong",
+  "de luc nao do ranh roi",
+  "loan yeu vao doc chang han",
+  "cho minh y kien voi nhen",
   "..",
-  ":D",
-  "ma cung hay, nhi",
-  "good night nhen",
+  "neu co gi do",
+  "hoat dong khong dung tren day",
+  "thi bao minh nhe",
+  "du minh khong biet do nghia la gi nua;D",
+  "aya, banh hom nay ngon khong",
+  "..",
+  "co le du no khong ngon nhung loan se khong noi ra@@",
+  "nhung ma",
+  "neu loan yeu bao khong ngon, biet dau",
+  "se duoc cai ngon hon, he:>",
+  "bai",
   "...",
-  "...",
-  "...",
-  "...",
-  "...",
-  "...",
-  "...",
-  "what are you waiting for..?",
-  "...",
-  "nhung buc anh minh cho vao hien thi ngau nhien do",
-  "co le minh nen them nhieu hon, nhi",
-  "thinh thoang may hinh anh hay de len chu nen hoi kho doc, he",
-  "...",
-  "@@het roi",
-  "...",
-  "...",
-  "zzz thoi",
+  "bai, minh khong muon nhung khong nghi ra gi nua roi",
+  "moi lan loan yeu vao day se het met moi, xua di noi buon",
+  "va gap nhieu dieu tot nua",
 ];
 let lineIndex = 0;
 
@@ -856,3 +856,4 @@ function clearText() {
 </script>
 </body>
 </html>
+
