--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <!-- Trái tim trung tâm -->
 <div class="heart" id="heart">
   <img src="img1.png" alt="heart" />
-  <span>An?</span>
+  <span>an?</span>
 </div>
 
 <!-- Text neon -->
@@ -217,9 +217,9 @@ musicIcon.addEventListener('click', () => {
 const lines = [
   ":>",
  "loan vao lai roi ne",
-  "00",
-  "loan yeu co nghi la",
-  "thinh thoang minh nen viet",
+  "00 neu loan dung chrome tren dt",
+  "thi nho bat dekstop size len nhen",
+  "loan yeu co nghi la thinh thoang minh nen viet",
   "may cai linh tinh len day khong",
   "de luc nao do ranh roi",
   "loan yeu vao doc chang han",
@@ -239,7 +239,7 @@ const lines = [
   "...",
   "bai, minh khong muon nhung khong nghi ra gi nua roi",
   "moi lan loan yeu vao day se het met moi, xua di noi buon",
-  "va gap nhieu dieu tot nua",
+  "va gap nhieu dieu tot nua.. minh mong la nhu vay",
 ];
 let lineIndex = 0;
 
@@ -856,4 +856,5 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
