--- a/index.html
+++ b/index.html
@@ -215,31 +215,31 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
+  "00",
+  "@@",
+  "oo",
+  "==",
+  "--",
+  "..",
+  "_",
+  "minh chua nghi ra gi de viet:>",
+  "bao gio co gi hay minh cap nhat a",
+  "..",
+  ":p",
   ":>",
- "loan vao lai roi ne",
-  "00 neu loan dung chrome tren dt",
-  "thi nho bat dekstop size len nhen",
-  "loan yeu co nghi la thinh thoang minh nen viet",
-  "may cai linh tinh len day khong",
-  "de luc nao do ranh roi",
-  "loan yeu vao doc chang han",
-  "cho minh y kien voi nhen",
-  "..",
-  "neu co gi do",
-  "hoat dong khong dung tren day",
-  "thi bao minh nhe",
-  "du minh khong biet do nghia la gi nua;D",
-  "aya, banh hom nay ngon khong",
-  "..",
-  "co le du no khong ngon nhung loan se khong noi ra@@",
-  "nhung ma",
-  "neu loan yeu bao khong ngon, biet dau",
-  "se duoc cai ngon hon, he:>",
-  "bai",
-  "...",
-  "bai, minh khong muon nhung khong nghi ra gi nua roi",
-  "moi lan loan yeu vao day se het met moi, xua di noi buon",
-  "va gap nhieu dieu tot nua.. minh mong la nhu vay",
+  "..........",
+  "...........",
+  "............",
+  ".............",
+  "..............",
+  "loan yeu van xem phai khong00",
+  "khong co gi dau ma",
+  "00",
+  "hom nay",
+  "minh duoc ai do pat ne",
+  "ne",
+  "ne",
+  "00het roi",
 ];
 let lineIndex = 0;
 
@@ -856,5 +856,6 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
