--- a/index.html
+++ b/index.html
@@ -270,508 +270,10 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-I Love You
-I Love You
-I Love You
-I Love You
- I Love You
-  I Love You
-   I Love You
-    I Love You
-     I Love You
-      I Love You
-       I Love You
-        I Love You
-         I Love You
-          I Love You
-           I Love You
-            I Love You
-             I Love You
-              I Love You
-               I Love You
-                I Love You
-                 I Love You
-                  I Love You
-                   I Love You
-                    I Love You
-                    I Love You
-                   I Love You
-                  I Love You
-                 I Love You
-                I Love You
-               I Love You
-              I Love You
-             I Love You
-            I Love You
-           I Love You
-          I Love You
-         I Love You
-        I Love You
-       I Love You
-      I Love You
-     I Love You
-    I Love You
-   I Love You
-  I Love You
- I Love You
-I Love You
-I Love You
- I Love You
-  I Love You
-   I Love You
-    I Love You
-     I Love You
-      I Love You
-       I Love You
-        I Love You
-         I Love You
-          I Love You
-           I Love You
-            I Love You
-             I Love You
-              I Love You
-               I Love You
-                I Love You
-                 I Love You
-                  I Love You
-                   I Love You
-                    I Love You
-                    I Love You
-                   I Love You
-                  I Love You
-                 I Love You
-                I Love You
-               I Love You
-              I Love You
-             I Love You
-            I Love You
-           I Love You
-          I Love You
-         I Love You
-        I Love You
-       I Love You
-      I Love You
-     I Love You
-    I Love You
-   I Love You
-  I Love You
- I Love You
-I Love You
-I Love You
-I Love Yo u
-I Love Yo  u
-I Love Yo   u
-I Love Yo    u
-I Love Y o    u
-I Love Y  o    u
-I Love Y   o    u
-I Love Y    o    u
-I Love  Y    o    u
-I Love   Y    o    u
-I Love    Y    o    u
-I Love     Y    o    u
-I Love      Y    o    u
-I Love       Y    o    u
-I Love        Y    o    u
-I Love         Y    o    u
-I Lov e         Y    o    u
-I Lov  e         Y    o    u
-I Lov   e         Y    o    u
-I Lov    e         Y    o    u
-I Lo v    e         Y    o    u
-I Lo  v    e         Y    o    u
-I Lo   v    e         Y    o    u
-I Lo    v    e         Y    o    u
-I L o    v    e         Y    o    u
-I L  o    v    e         Y    o    u
-I L   o    v    e         Y    o    u
-I L    o    v    e         Y    o    u
-I  L    o    v    e         Y    o    u
-I   L    o    v    e         Y    o    u
-I    L    o    v    e         Y    o    u
-I     L    o    v    e         Y    o    u
-I      L    o    v    e         Y    o    u
-I       L    o    v    e         Y    o    u
-I        L    o    v    e         Y    o    u
-I         L    o    v    e         Y    o    u
- I         L    o    v    e         Y    o    u
-  I         L    o    v    e         Y    o    u
-   I         L    o    v    e         Y    o    u
-    I         L    o    v    e         Y    o    u
-     I         L    o    v    e         Y    o   u
-      I         L    o    v    e         Y    o  u
-       I         L    o    v    e         Y    o u
-        I         L    o    v    e         Y    ou
-         I         L    o    v    e         Y   ou
-          I         L    o    v    e         Y  ou
-           I         L    o    v    e         Y ou
-            I         L    o    v    e         You
-             I         L    o    v    e        You
-              I         L    o    v    e       You
-               I         L    o    v    e      You
-                I         L    o    v    e     You
-                 I         L    o    v    e    You
-                  I         L    o    v    e   You
-                   I         L    o    v    e  You
-                    I         L    o    v    e You
-                     I         L    o    v    eYou
-                      I         L    o    v   eYou
-                       I         L    o    v  eYou
-                        I         L    o    v eYou
-                         I         L    o    veYou
-                          I         L    o   veYou
-                           I         L    o  veYou
-                            I         L    o veYou
-                             I         L    oveYou
-                              I         L   oveYou
-                               I         L  oveYou
-                                I         L oveYou
-                                 I         LoveYou
-                                  I        LoveYou
-                                   I       LoveYou
-                                    I      LoveYou
-                                     I     LoveYou
-                                      I    LoveYou
-                                       I   LoveYou
-                                        I  LoveYou
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                       I Lo v e You
-                                      I Lo  v  e You
-                                     I Lo   v   e You
-                                    I Lo    v    e You
-                                   I Lo     v     e You
-                                  I Lo      v      e You
-                                 I Lo       v       e You
-                                I Lo        v        e You
-                               I Lo         v         e You
-                              I Lo          v          e You
-                              I Lo         v           e You
-                              I Lo        v            e You
-                              I Lo       v             e You
-                              I Lo        v            e You
-                              I Lo         v           e You
-                              I Lo          v          e You
-                              I Lo           v         e You
-                              I Lo            v        e You
-                              I Lo             v       e You
-                              I Lo            v        e You
-                              I Lo           v         e You
-                              I Lo          v          e You
-                              I Lo         v           e You
-                              I Lo        v            e You
-                              I Lo       v             e You
-                              I Lo        v            e You
-                              I Lo         v           e You
-                              I Lo          v          e You
-                              I Lo           v         e You
-                              I Lo            v        e You
-                              I Lo             v       e You
-                              I Lo            v        e You
-                              I Lo           v         e You
-                              I Lo          v          e You
-                               I Lo         v         e You
-                                I Lo        v        e You
-                                 I Lo       v       e You
-                                  I Lo      v      e You
-                                   I Lo     v     e You
-                                    I Lo    v    e You
-                                     I Lo   v   e You
-                                      I Lo  v  e You
-                                       I Lo v e You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                        I Love You
-                                       I Love You
-                                      I Love You
-                                     I Love You
-                                    I Love You
-                                   I Love You
-                                  I Love You
-                                 I Love You
-                                I Love You
-                               I Love You
-                              I Love You
-                             I Love You
-                            I Love You
-                           I Love You
-                          I Love You
-                         I Love You
-                        I Love You
-                       I Love You
-                      I Love You
-                     I Love You
-                    I Love You
-                   I Love You
-                  I Love You
-                 I Love You
-                I Love You
-               I Love You
-              I Love You
-             I Love You
-            I Love You
-           I Love You
-          I Love You
-         I Love You
-        I Love You
-       I Love You
-      I Love You
-     I Love You
-    I Love You
-   I Love You
-  I Love You
- I Love You
-I Love You
- I Love You
-  I Love You
-   I Love You
-    I Love You
-     I Love You
-    I  Love You
-   I   Love You
-  I    Love You
- I     Love You
-I      Love You
-I      Love You
-I      Love You
-I      Love You
-I      Love You
-I      Love You
-I     L ove You
-I    L  ove You
-I   L   ove You
-I  L    ove You
-I L     ove You
-I L    o ve You
-I L   o  ve You
-I L  o   ve You
-I L o    ve You
-I Lo     ve You
-I Lo    v e You
-I Lo   v  e You
-I Lo  v   e You
-I Lo v    e You
-I Lov     e You
-I Lov    e  You
-I Lov   e   You
-I Lov  e    You
-I Lov e     You
-I Love      You
-I Love      You
-I Love      You
-I Love      You
-I Love      You
-I Love      You
-I Love     Y ou
-I Love    Y  ou
-I Love   Y   ou
-I Love  Y    ou
-I Love Y     ou
-I Love Y    o u
-I Love Y   o  u
-I Love Y  o   u
-I Love Y o    u
-I Love Yo     u
-I Love Yo    u 
-I Love Yo   u  
-I Love Yo  u   
-I Love Yo u    
-I Love You     
-I Love You
-uI Love Yo
-ouI Love Y
-YouI Love 
- YouI Love
-e YouI Lov
-ve YouI Lo
-ove YouI L
-Love YouI 
- Love YouI
-I Love You
-uI Love Yo
-ouI Love Y
-YouI Love 
- YouI Love
-e YouI Lov
-ve YouI Lo
-ove YouI L
-Love YouI 
- Love YouI
-I Love You
-uI Love Yo
-ouI Love Y
-YouI Love 
- YouI Love
-e YouI Lov
-ve YouI Lo
-ove YouI L
-Love YouI 
- Love YouI
-I Love You
-I Love You
- I Love You
-  I Love You
-   I Love You
-    I Love You
-     I Love You
-      I Love You
-       I Love You
-        I Love You
-         I Love You
-          I Love You
-         I Lov  e You
-        I Lov    e You
-       I Lov      e You
-      I Lov        e You
-     I Lov          e You
-    I Lov            e You
-   I Lov              e You
-  I Lov                e You
- I Lov                  e You
-I Lov                    e You
- I Lov                  e You
-  I Lov                e You
-   I Lov              e You
-    I Lov            e You
-     I Lov          e You
-      I Lov        e You
-       I Lov      e You
-        I Lov    e You
-         I Lov  e You
-          I Love You
-           I Loe You
-            I Le You
-             I e You
-              Ie You
-               e You
-              e Youv
-             e Youov
-            e YouLov
-           e You Lov
-          e YouI Lov
-         e You  I Lov
-        e You    I Lov
-       e You      I Lov
-      e You        I Lov
-     e You          I Lov
-    e You            I Lov
-   e You              I Lov
-  e You                I Lov
- e You                  I Lov
-e You                    I Lov
- e You                  I Lov
-  e You                I Lov
-   e You              I Lov
-    e You            I Lov
-     e You          I Lov
-      e You        I Lov
-       e You      I Lov
-        e You    I Lov
-         e You  I Lov
-          e YouI Lov
-           e YoI Lov
-            e YI Lov
-             e I Lov
-              eI Lov
-               I Lov
-              I Lovu
-             I Lovou
-            I LovYou
-           I Lov You
-          I Love You
-         I Lov  e You
-        I Lov    e You
-       I Lov      e You
-      I Lov        e You
-     I Lov          e You
-    I Lov            e You
-   I Lov              e You
-  I Lov                e You
- I Lov                  e You
-I Lov                    e You
- I Lov                  e You
-  I Lov                e You
-   I Lov              e You
-    I Lov            e You
-     I Lov          e You
-      I Lov        e You
-       I Lov      e You
-        I Lov    e You
-         I Lov  e You
-          I Love You
-           I Loe You
-            I Le You
-             I e You
-              Ie You
-               e You
-              e Youv
-             e Youov
-            e YouLov
-           e You Lov
-          e YouI Lov
-         e You  I Lov
-        e You    I Lov
-       e You      I Lov
-      e You        I Lov
-     e You          I Lov
-    e You            I Lov
-   e You              I Lov
-  e You                I Lov
- e You                  I Lov
-e You                    I Lov
- e You                  I Lov
-  e You                I Lov
-   e You              I Lov
-    e You            I Lov
-     e You          I Lov
-      e You        I Lov
-       e You      I Lov
-        e You    I Lov
-         e You  I Lov
-          e YouI Lov
-           e YoI Lov
-            e YI Lov
-             e I Lov
-              eI Lov
-               I Lov
-              I Lovu
-             I Lovou
-            I LovYou
-           I Lov You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-          I Love You
-         I Love You
-        I Love You
-       I Love You
-      I Love You
-     I Love You
-    I Love You
-   I Love You
-  I Love You
- I Love You
-I Love You
-I Love You
-I Love You
-I Love You
+zzz
+zzz
+zzz
+:P
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -856,6 +358,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
