Refactor index.html with updated content and styles

--- a/index.html
+++ b/index.html
@@ -215,31 +215,29 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "00",
-  "@@",
-  "oo",
-  "==",
-  "--",
-  "..",
-  "_",
-  "minh chua nghi ra gi de viet:>",
-  "bao gio co gi hay minh cap nhat a",
-  "..",
+  "moi lan co ai vao lop van la ca lop se",
+  "ooooooooooooo ha:>",
   ":p",
-  ":>",
+  ".",
+  "..",
+  "...",
+  "....",
+  ".....",
+  "......",
+  ".......",
+  "........",
+  ".........",
   "..........",
   "...........",
   "............",
   ".............",
   "..............",
-  "loan yeu van xem phai khong00",
-  "khong co gi dau ma",
-  "00",
-  "hom nay",
-  "minh duoc ai do pat ne",
-  "ne",
-  "ne",
-  "00het roi",
+  "tren day la kim tu thap",
+  "ma loan yeu tung nghe ve space x chua",
+  "ke cho minh voi",
+  "nhen..",
+  "minh cung muon thay doi may buc hinh tren nay",
+  "ma khong co .png nhieu@@ neu loan yeu co cho minh xin nhe",
 ];
 let lineIndex = 0;
 
@@ -874,6 +872,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
