Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -215,29 +215,29 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "moi lan co ai vao lop van la ca lop se",
-  "ooooooooooooo ha:>",
-  ":p",
+  "buon qua di",
+  "minh muon di olympic hnoi",
+  "ma qua han dang ki mat roi",
   ".",
   "..",
   "...",
   "....",
-  ".....",
-  "......",
-  ".......",
-  "........",
-  ".........",
-  "..........",
-  "...........",
-  "............",
-  ".............",
-  "..............",
-  "tren day la kim tu thap",
-  "ma loan yeu tung nghe ve space x chua",
-  "ke cho minh voi",
-  "nhen..",
-  "minh cung muon thay doi may buc hinh tren nay",
-  "ma khong co .png nhieu@@ neu loan yeu co cho minh xin nhe",
+  ".. ..",
+  "..  ..",
+  "..   ..",
+  "..    ..",
+  "..     ..",
+  "..______..",
+  "..       ..",
+  "..________..",
+  ".._________..",
+  "__          __",
+  "doan xem day la gi ne:>",
+  "..",
+  "khong biet minh lam co bi lech khong nua",
+  "nho ngu som nhen",
+  "good night",
+  "00 nho nhu nhom nhen",
 ];
 let lineIndex = 0;
 
@@ -872,6 +872,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
