Replace project title and update HTML structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/jpg" href="favicon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 3</title>
+  <title>OD</title>
   <style>
     body {
       margin: 0;
@@ -183,7 +183,7 @@
 <!-- Trái tim trung tâm -->
 <div class="heart" id="heart">
   <img src="img1.png" alt="heart" />
-  <span>an?</span>
+  <span>an:></span>
 </div>
 
 <!-- Text neon -->
@@ -872,6 +872,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
