--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ musicIcon.addEventListener('click', () => {
 
 /* Neon text */
 const lines = [
-  "buon qua di",
-  "minh muon di olympic hnoi",
-  "ma qua han dang ki mat roi",
+  "an day roi",
+  "an doi",
+  "an buon ngu00",
   ".",
   "..",
   ".|.",
@@ -235,9 +235,9 @@ const lines = [
   "doan xem day la gi ne:>",
   "..",
   "khong biet minh lam co bi lech khong nua",
-  "nho ngu som nhen",
-  "good night",
-  "00 nho nhu nhom nhen",
+  "loan yeu hom qua ngu quen ha",
+  "00",
+  "chuc may man",
 ];
 let lineIndex = 0;
 
@@ -872,6 +872,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
