--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ const lines = [
   "an buon ngu00",
   ".",
   "..",
-  ".|.",
-  "./\.",
-  "./ \.",
-  "./  \.",
-  "./   \.",
+  ". .",
+  ".  .",
+  ".   .",
+  ".    .",
+  ".     .",
   "..____..",
   ".._____..",
   "..      ..",
@@ -268,526 +268,645 @@ function startNeonText() {
 
 /* Trái tim */
 const asciiLines = `
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-:P
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
-zzz
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:p
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan yeu di hoc met khong
+:3
+:3
+:3
+:3
+:3
+hom nay loan an sang khong
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan dinh ngu trua khong do
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan yeu di hoc met khong
+:3
+:3
+:3
+:3
+:3
+hom nay loan an sang khong
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan dinh ngu trua khong do
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan yeu di hoc met khong
+:3
+:3
+:3
+:3
+:3
+hom nay loan an sang khong
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+hom nay loan dinh ngu trua khong do
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:p
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:p
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:p
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:p
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
+:3
 `;
 const heart = document.getElementById("heart");
 const chatBox = document.getElementById("chatBox");
@@ -872,6 +991,7 @@ function clearText() {
 </script>
 </body>
 </html>
+
 
 
 
